# govtext-client

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  commitlint.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  sample.env
.github/: auto_assign.yml  pr-labeler.yml  pull_request_template.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-reporting.md  feature-request.md
.github/workflows/: approve-pull-request.yml  pre-commit.yml  size-labeler.yml
examples/: process.yml
govtext_client/: client.py  helper.py  options.py  schema.py
govtext_client/cli/: auth.py  config.py  error_handler.py  govtext.py
govtext_client/common/: configurations.py  constants.py  exceptions.py  settings.py
